--- a/Pages/edit/index.html
+++ b/Pages/edit/index.html
@@ -16,8 +16,13 @@
         <option value="0">Todos</option>
     </select>
     <button onclick="pegarValor()">Filtrar Categoria</button>
+    <script>
+        const nego = () => {
+            console.log("Não batman ");
+        };
+    </script>
 
-    <section id="secProduto"></section>
+    <section id="secProduto" onmouseover="nego()"></section>
     <script src="../edit/script.js"></script>
 </body>
 </html>
