--- a/Pages/home/home.html
+++ b/Pages/home/home.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../Components/css/produtoCard.css">
+    <link rel="stylesheet" href="./home.css">
+    <link rel="stylesheet" href="../../Components/css/header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Red+Rose:wght@300..700&display=swap" rel="stylesheet">
     <title>Mercadinho</title>
 </head>
 <body>
+    <header></header>
     
     <select id="filtroProdutos">
         <option value="electronics">Eletrônicos</option>
@@ -19,10 +22,11 @@
         <option value="0">Todos</option>
     </select>
     
-    <button onclick="pegarValor()">Filtrar Categoria</button>
+    <button id="button">Filtrar Categoria</button>
 
     <section id="secProduto"></section>
 
     <script type="module" src="./script.js" defer></script>
+    <script type="module" src="../../Components/header.js" defer></script>
 </body>
 </html>
