--- a/Pages/cadastro/cadastro.html
+++ b/Pages/cadastro/cadastro.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="cadastro-box">
-            <div id="cadastro">
+            <form id="cadastro">
                 <h2>Cadastro</h2>
                 <div class="input">
                     <input type="text" id="username" placeholder="Usuário">
@@ -21,7 +21,7 @@
                     <input type="password" id="password" placeholder="Senha">
                 </div>
                 <button class="btn">Cadastrar</button>
-            </div>
+            </form>
         </div>
         <div class="bemvindo-box">
             <div class="bemvindo">
