--- a/Pages/login/login.html
+++ b/Pages/login/login.html
@@ -8,19 +8,29 @@
 </head>
 <body>
     <div class="container">
+        <div class="welcome-box">
+            <div class="welcome">
+                <h2>Olá, seja bem-vindo!</h2>
+                <p>Não tem uma conta?</p>
+                <button id="cadastroBtn" class="btn">Cadastro</button>
+            </div> 
+        </div>  
+        <!-- Área de login -->
         <div class="login-box">
-            <h2>Login</h2>
-            <div class="input">
-                <input type="text" id="username" placeholder="Usuário" required>
-            </div>
-            <div class="input">
-                <input type="password" id="password" placeholder="Senha" required>
-            </div>
-            <button id="loginBtn" class="btn">Entrar</button>
-            <p>Não tem uma conta?</p>
-            <button id="cadastroBtn" class="btn">Cadastre-se</button>
+            <form id="login">
+                    <h2>Login</h2>
+                    <div class="input">
+                        <input type="text" id="username" placeholder="Usuário" required>
+                    </div>
+                    <div class="input">
+                        <input type="password" id="password" placeholder="Senha" required>
+                    </div>
+                    <button id="loginBtn" class="btn">Login</button>
+                <a href="#">Esqueceu a senha?</a>
+            </form>
         </div>
     </div>
-    <script src="./login.js"></script>
+
+    <script src="login.js"></script>
 </body>
 </html>
