Aplicando funcionalidade de edição

--- a/Pages/edit/index.html
+++ b/Pages/edit/index.html
@@ -21,13 +21,13 @@
         <option value="women's clothing">Roupas Femininas</option>
         <option value="0">Todos</option>
     </select>
-    <button onclick="pegarValor()">Filtrar Categoria</button>
+    <button onclick="pegarValor()">Filtrar</button>
     <script>
         const nego = () => {
             console.log("Não batman ");
         };
         </script>
-
+    <div class="borda"></div>
     <section id="secProduto" onmouseover="nego()">
 
     </section>
