First of the day

--- a/Pages/edit/index.html
+++ b/Pages/edit/index.html
@@ -22,13 +22,9 @@
         <option value="0">Todos</option>
     </select>
     <button onclick="pegarValor()">Filtrar</button>
-    <script>
-        const nego = () => {
-            console.log("Não batman ");
-        };
-        </script>
+
     <div class="borda"></div>
-    <section id="secProduto" onmouseover="nego()">
+    <section id="secProduto">
 
     </section>
     <script type="module" src="../../Components/header.js" defer></script>
