Adicionei os arquivos da pág usuário

--- a/Pages/Usuario/index.html
+++ b/Pages/Usuario/index.html
@@ -7,23 +7,7 @@
     <title>Usuário</title>
 </head>
 <body>
-    <h2>Perfil do Usuário</h2>
-    
-    <div>
-        <p><strong>Email:</strong> <span id="email"></span></p>
-        <p><strong>Nome:</strong> <span id="nome"></span></p>
-        <p><strong>Senha:</strong> <span id="password"></span></p>
-    </div>
-    <!-- <fieldset>
-        <legend>Dados Usuário</legend>
-        <section id="sectionUsuario">
-            <div class="infoUsuario">
-                <label for="email">Email: </label>
-                <label for="username"></label>
-            </div>
-        </section>
-    </fieldset>
-     -->
-    <script src="script.js"></script>
+    <div id="usuario"></div>
+    <script type="module" src="./usuario.js"></script>
 </body>
 </html>
